--- a/1/1style.css
+++ b/1/1style.css
@@ -21,6 +21,7 @@ body {
   height: 380px;
   background: #000;
   box-shadow: 0 15px 45px rgba(0, 0, 0, 0.1);
+  display: flex;
 }
 
 .card .imgBx {
@@ -28,4 +29,23 @@ body {
   min-width: 300px;
   height: 100%;
   background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card .imgBx img {
+  max-width: 250px;
+  transition: 0.5s ease-in-out;
+}
+
+.card:hover .imgBx img {
+  transform: rotate(-35deg);
+}
+
+.card .details {
+  position: relative;
+  width: 300px;
+  height: 100%;
+  background: #4ba9e9;
 }
