--- a/2/2style.css
+++ b/2/2style.css
@@ -110,3 +110,17 @@ body {
   color: #fff;
   background: var(--clr);
 }
+
+.navigation ul li a .icon::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--clr);
+  /* ぼかし */
+  filter: blur(8px);
+  opacity: 0;
+  transition: 0.5s;
+}
