--- a/2/2style.css
+++ b/2/2style.css
@@ -82,7 +82,16 @@ body {
   width: 100%;
   height: 60px;
   padding: 0 10px;
-  transition: 0.5;
+  /* アイコンが右に動くスピード */
+  transition: 0.5s;
+}
+
+.navigation ul li.active {
+  transform: translateX(30px);
+}
+
+.navigation.open ul li.active {
+  transform: translateX(10px);
 }
 
 .navigation ul li a {
@@ -114,7 +123,7 @@ body {
 .navigation ul li a .icon::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 10px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -123,4 +132,29 @@ body {
   filter: blur(8px);
   opacity: 0;
   transition: 0.5s;
+}
+
+.navigation ul li.active a .icon::before {
+  opacity: 0.5;
+}
+
+.navigation ul li a .text {
+  position: relative;
+  padding: 0 15px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  color: #333;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.navigation.open ul li a .text {
+  opacity: 1;
+  visibility: visible;
+}
+
+.navigation ul li.active a .text {
+  color: var(--clr);
 }
